Fix heading being clickable from behind polaroid

--- a/sass/home/_title.scss
+++ b/sass/home/_title.scss
@@ -18,6 +18,7 @@
   transition: var(--transition-bezier);
   margin: 0;
   margin-block: 0 3rem;
+  width: fit-content;
   font-weight: 400;
   font-size: 5rem;
   font-family: "Pacifico";
